--- a/dev/index.html
+++ b/dev/index.html
@@ -21,8 +21,8 @@
         </h1>
         <p>
             Clip-path est une propriété css qui permet de montrer une partie specifiée d'un élément et cacher tout le reste. Clip-path est utilisée la plupart du temps pour des images mais peut etre également utilisé sur du texte. <br>
-            L'élément garde sa taille originale même si il est pas entièrement visible.
-            Ce qui est intérssant c'est qu'on peut lui mettre une transition pour donner un effet au click ou au survol.
+            L'élément garde sa taille originale même s'il n'est pas entièrement visible.
+            Ce qui est intéressant c'est qu'on peut lui mettre une transition pour donner un effet au click ou au survol.
         </p>
 
         <h2>Image originale</h2>
